--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development nodemon server/server.js & NODE_ENV=development webpack serve"
+    "dev": "concurrently \"NODE_ENV=development nodemon server/server.js\" \"NODE_ENV=development webpack-dev-server --open\""
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,12 @@
   },
   "homepage": "https://github.com/wunderpus-photogenicus-5/scratch-project#readme",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.8",
+    "@mui/styles": "^5.2.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "css-loader": "^6.5.1",
@@ -29,6 +34,7 @@
     "express-session": "^1.17.2",
     "google-auth-library": "^7.11.0",
     "js-cookie": "^3.0.1",
+    "material-ui-chip-input": "^2.0.0-beta.2",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,6 +49,7 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "babel-loader": "^8.2.3",
+    "concurrently": "^7.0.0",
     "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
