--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.2.3",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "css-loader": "^6.5.1",
@@ -36,6 +37,7 @@
     "google-auth-library": "^7.11.0",
     "js-cookie": "^3.0.1",
     "material-ui-chip-input": "^2.0.0-beta.2",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
