--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "google-auth-library": "^7.11.0",
+    "http": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "pg": "^8.7.1",
