--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "sass-loader": "^12.4.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "timeago": "^1.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
