--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "style-loader": "^3.3.1",
-    "timeago": "^1.6.7"
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
