--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "google-auth-library": "^7.11.0",
     "js-cookie": "^3.0.1",
     "material-ui-chip-input": "^2.0.0-beta.2",
+    "passport": "^0.5.2",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "react": "^17.0.2",
