--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@graphql-tools/schema": "^8.3.1",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
@@ -33,8 +34,11 @@
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "google-auth-library": "^7.11.0",
+    "graphql": "^15.8.0",
+    "graphql-tools": "^8.2.0",
     "http": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "material-ui-chip-input": "^2.0.0-beta.2",
